--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 
     <groupId>com.github.cambridgeweblab</groupId>
     <artifactId>test-support</artifactId>
-    <version>2.3.0-SNAPSHOT</version>
+    <version>2.5.x-SNAPSHOT</version>
     <packaging>jar</packaging>
 
 
     <properties>
         <!-- NOTE: Dependency management comes via weblab-common-java's Spring Boot as well
              as Spring Boot so they may conflict if not aligned -->
-        <common-java.version>2.3.0-SNAPSHOT</common-java.version>
+        <common-java.version>2.5.x-SNAPSHOT</common-java.version>
         <spring-boot.version>2.3.12.RELEASE</spring-boot.version>
         <spring-security-jwt.version>1.0.9.RELEASE</spring-security-jwt.version>
         <activiti.version>5.19.0.1</activiti.version>
